--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
 
@@ -84,6 +85,15 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.37"
     implementation "com.google.dagger:hilt-compiler:2.37"
     kapt "com.google.dagger:hilt-compiler:2.37"
+
+    // rxjava dependencies
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
+
+    // room dependencies
+    implementation "androidx.room:room-ktx:2.4.1"
+    kapt "androidx.room:room-compiler:2.4.1"
+    implementation "androidx.room:room-rxjava2:2.4.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
