--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     // rxjava dependencies
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
+    implementation("com.jakewharton.rxbinding3:rxbinding:3.1.0")
 
     // room dependencies
     implementation "androidx.room:room-ktx:2.4.1"
